# GH-Copilot-API

./: .env.example  .gitignore  Dockerfile  config.json.example  docker-compose.yml  pyproject.toml  readme.md  token-refresh.sh
gh_copilot_api/: config.py  logger.py  main.py  server.py  token.py
